--- a/Simple AVS Generator.csproj
+++ b/Simple AVS Generator.csproj
@@ -62,35 +62,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Simple AVS Generator.cs">
+    <Compile Include="source\Simple AVS Generator.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Simple AVS Generator.Designer.cs">
+    <Compile Include="source\Simple AVS Generator.Designer.cs">
       <DependentUpon>Simple AVS Generator.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Simple AVS Generator.resx">
+    <Compile Include="source\Program.cs" />
+    <Compile Include="source\Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="source\Simple AVS Generator.resx">
       <DependentUpon>Simple AVS Generator.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
@@ -103,6 +85,16 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="build\Build [Project].cmd" />
+    <None Include="build\Build [Solution].cmd" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="source\CMakeLists.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
