--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -12,12 +12,31 @@ add_executable(
 	"Simple AVS Generator.Designer.cs"
 	"Simple AVS Generator.resx"
 	Properties/AssemblyInfo.cs
+	Properties/Resources.resx
+	Properties/Resources.Designer.cs
+	Properties/Settings.settings
+	Properties/Settings.Designer.cs
 )
 
 set_source_files_properties(
 	"Simple AVS Generator.Designer.cs" PROPERTIES
 	VS_CSHARP_DependentUpon "Simple AVS Generator.cs"
 	VS_CSHARP_SubType "Form"
+)
+
+set_source_files_properties(
+	"Simple AVS Generator.resx" PROPERTIES
+	VS_CSHARP_DependentUpon "Simple AVS Generator.cs"
+)
+
+set_source_files_properties(
+	Resources.Designer.cs PROPERTIES
+	VS_CSHARP_DependentUpon Resources.resx
+)
+
+set_source_files_properties(
+	Settings.Designer.cs PROPERTIES
+	VS_CSHARP_DependentUpon Settings.settings
 )
 
 set_target_properties(
