Add License: GPL v2

--- a/Simple AVS Generator.csproj
+++ b/Simple AVS Generator.csproj
@@ -98,6 +98,7 @@
     <None Include="source\Properties\Settings.settings" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="LICENSE.txt" />
     <Content Include="source\CMakeLists.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
