Add an Application Setting to Save and Load Location

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -10,6 +10,7 @@ project(
 add_executable(
 	${PROJECT_NAME} WIN32
 	Program.cs
+	Settings.cs
 	"Simple AVS Generator.cs"
 	"Simple AVS Generator.Designer.cs"
 	"Simple AVS Generator.resx"
