Add app.config File
Without it, the application failed to debug because it stores the location setting that is used by the application

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -9,6 +9,7 @@ project(
 
 add_executable(
 	${PROJECT_NAME} WIN32
+	app.config
 	Program.cs
 	"Simple AVS Generator.cs"
 	"Simple AVS Generator.Designer.cs"
