cmake: minor fix

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -32,7 +32,7 @@ if(${GIT_FOUND} AND EXISTS "${CMAKE_SOURCE_DIR}/../.git")
 	)
 	
 	execute_process(
-		COMMAND ${GIT_EXECUTABLE} describe --tags ${GIT_COMMIT_ID}
+		COMMAND ${GIT_EXECUTABLE} describe --tags ${COMMIT_ID}
 		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 		OUTPUT_VARIABLE GIT_TAG
 		OUTPUT_STRIP_TRAILING_WHITESPACE
