--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,9 @@ image: Visual Studio 2019
 
 version: '{build}'
 
+configuration:
+    - Release
+
 before_build:
     - cmd: cmake -G "Visual Studio 16" -S "source" -B "build"
 
