upgrade target .net framework to 4.8 to be supported by vs2022
after upgrading from vs2019 to vs2022, builds were failing due to the framework being too old. the only version supported seemed to be 4.8 after various testing

this means that windows xp and vista support is removed with targeting this framework version with windows 7 x64 being the oldest platform supported

also upgrade the minimum cmake version to 3.22 to support the visual studio 17 generator

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.8)
+cmake_minimum_required(VERSION 3.22)
 
 include(CSharpUtilities)
 include(FindGit)
@@ -119,7 +119,7 @@ csharp_set_designer_cs_properties(
 set_target_properties(
 	${PROJECT_NAME} 
 	PROPERTIES
-		VS_DOTNET_TARGET_FRAMEWORK_VERSION "v4.0"
+		DOTNET_TARGET_FRAMEWORK_VERSION "4.8"
 		VS_DOTNET_REFERENCES "System;System.Windows.Forms;System.Data;System.Drawing"
 		OUTPUT_NAME "Simple AVS Generator"
 )
