--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-image: Visual Studio 2019
+image: Visual Studio 2022
 
 version: 'Build {build}'
 
@@ -6,12 +6,12 @@ configuration:
     - Release
 
 before_build:
-    - cmd: cmake -G "Visual Studio 16" -S "source" -B "build" -DAPPVEYOR_CI=ON
+    - cmd: cmake -G "Visual Studio 17" -S . -B "build" -DAPPVEYOR_CI=ON
     - cmd: set /p version=<"source/version.txt"
     - cmd: appveyor UpdateBuild -Version "v%version%"
 
-build:
-    project: "build/SimpleAVSGenerator.sln"
+build_script:
+    - cmd: build.cmd
 
 artifacts:
-    - path: "build/Release/Simple AVS Generator.exe"
+    - path: "publish/Simple AVS Generator.exe"
