--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ configuration:
 
 before_build:
     - cmd: cmake -G "Visual Studio 17" -S . -B "build" -DAPPVEYOR_CI=ON
-    - cmd: set /p version=<"source/version.txt"
+    - cmd: set /p version=<"version.txt"
     - cmd: appveyor UpdateBuild -Version "v%version%"
 
 build_script:
