cmake: use languages none in the project command
since the purpose of cmake in this context is just to version the application and isn't used to create the build system, there's no need for cmake to look for compilers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,10 @@ cmake_minimum_required(VERSION 3.21.4)
 
 include(FindGit)
 
-project(SimpleAVSGenerator)
+project(
+	SimpleAVSGenerator
+	LANGUAGES NONE
+)
 
 # Extracting version
 
