--- a/Simple AVS Generator/Simple AVS Generator.csproj
+++ b/Simple AVS Generator/Simple AVS Generator.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Simple AVS Generator.Core\Simple AVS Generator.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Settings.Designer.cs">
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <AutoGen>True</AutoGen>
