--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ Simple AVS Generator/obj/
 Simple AVS Generator.Core/bin/
 Simple AVS Generator.Core/obj/
 
+Simple AVS Generator.Core.Tests/bin
+Simple AVS Generator.Core.Tests/obj
+
 # File extensions
 *.exe
 *.user
