appveyor: use a backslash as the path separator under artifacts
since this is on a windows image, use the windows path separator consistently

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,4 +17,4 @@ test_script:
     - cmd: dotnet test "Simple AVS Generator.Core.Tests\Simple AVS Generator.Core.Tests.csproj"
 
 artifacts:
-    - path: "publish/Simple AVS Generator.exe"
+    - path: "publish\Simple AVS Generator.exe"
