core: set the assembly title
for the longest time i tried to set this and didn't know how to

saw how microsoft set it in the generated AssemblyInfo cache, tried it and it worked

--- a/SimpleAVSGenerator.Core/SimpleAVSGenerator.Core.csproj
+++ b/SimpleAVSGenerator.Core/SimpleAVSGenerator.Core.csproj
@@ -15,6 +15,7 @@
   <!-- Manually added PropertyGroup for versioning the library -->
   <PropertyGroup>
     <Product>Core Library for Simple AVS Generator</Product>
+    <AssemblyTitle>Core Library for Simple AVS Generator</AssemblyTitle>
     <AssemblyDescription>Core Library for Simple AVS Generator</AssemblyDescription>
     <Authors>Shaylen Reddy</Authors>
     <Copyright>Shaylen Reddy: GPLv2</Copyright>
