--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,9 +2,6 @@ image: Visual Studio 2022
 
 version: 'Build {build}'
 
-configuration:
-    - Release
-
 before_build:
     - cmd: cmake -G "Visual Studio 17" -S . -B "build" -DAPPVEYOR_CI=ON
     - cmd: set /p version=<"version.txt"
@@ -14,7 +11,7 @@ build_script:
     - cmd: build.cmd
 
 test_script:
-    - cmd: dotnet test "SimpleAVSGenerator.Core.Tests\SimpleAVSGenerator.Core.Tests.csproj"
+    - cmd: dotnet test -c Debug "SimpleAVSGenerator.Core.Tests\SimpleAVSGenerator.Core.Tests.csproj"
 
 artifacts:
     - path: "publish\\Simple AVS Generator.exe"
