gitignore: add directories i use to check code coverage
TestResults is created when you add --collect:"XPlat Code Coverage" to the test arguments
CodeCoverage is usually used to hold a report created by the dotnet reportgenerator tool using the coverage.cobertura.xml file

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .vs/
 .vscode/
 build/
+CodeCoverage/
 publish/
 
 SimpleAVSGenerator/bin/
@@ -12,6 +13,7 @@ SimpleAVSGeneratorCore/obj/
 
 SimpleAVSGeneratorCore.Tests/bin/
 SimpleAVSGeneratorCore.Tests/obj/
+SimpleAVSGeneratorCore.Tests/TestResults/
 
 # File extensions
 *.exe
