--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,14 +1,14 @@
 image: Visual Studio 2022
 
-version: 'Build {build}'
+version: '#{build}'
 
 before_build:
-    - cmd: cmake -G "Visual Studio 17" -S . -B "build" -DAPPVEYOR_CI=ON
+    - cmd: cmake -G "Visual Studio 17" -S . -B "build" -DCI_BUILD=ON
     - cmd: set /p version=<"version.txt"
-    - cmd: appveyor UpdateBuild -Version "v%version%"
+    - cmd: 'appveyor UpdateBuild -Version "v%version% | %APPVEYOR_JOB_ID%"'
 
 build_script:
-    - cmd: build.cmd
+    - cmd: dotnet-publish.cmd
 
 test_script:
     - cmd: dotnet test -c Debug "SimpleAVSGeneratorCore.Tests\SimpleAVSGeneratorCore.Tests.csproj"
