add true samples to which to base the tests on :D
created the samples with the blankclip() core filter of avisynth+

5 seconds of blank video with 5 seconds of silent audio. enough to make the samples true

with this, mediainfo is in all build configs now and code coverage is once again at 100% :D, the most exciting part of this

--- a/SimpleAVSGeneratorCore.Tests/SimpleAVSGeneratorCore.Tests.csproj
+++ b/SimpleAVSGeneratorCore.Tests/SimpleAVSGeneratorCore.Tests.csproj
@@ -25,4 +25,10 @@
     <ProjectReference Include="..\SimpleAVSGeneratorCore\SimpleAVSGeneratorCore.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Samples\*">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
