--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -94,6 +94,21 @@ steps:
     archiveFile: '$(Build.ArtifactStagingDirectory)\Simple AVS Generator.zip'
 
 - task: PublishBuildArtifacts@1
-  displayName: 'Publish the Build Artifact'
+  displayName: 'Publish Build Artifacts'
+  
+- task: GitHubRelease@1
+  displayName: 'Create a New GitHub Release'
+  condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
   inputs:
-    ArtifactName: 'Simple AVS Generator'
+    gitHubConnection: 'ShaylenReddy42_OAuth'
+    repositoryName: '$(Build.Repository.Name)'
+    action: create
+    tagSource: userSpecifiedTag
+    tag: $(Build.SourceBranchName)
+    title: 'Release v$(Build.SourceBranchName)'
+    releaseNotesSource: filePath
+    releaseNotesFilePath: '$(Build.SourcesDirectory)/docs/releases/v$(Build.SourceBranchName).md'
+    assets: '$(Build.ArtifactStagingDirectory)/*'
+    addChangeLog: true
+    changeLogCompareToRelease: lastFullRelease
+    changeLogType: commitBased
