pipelines: don't generate a changelog for releases
when i tagged this as 2.1.0 and saw the changelog, i immediately was like, "NOPE", and edited it out

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -121,6 +121,4 @@ steps:
     releaseNotesSource: filePath
     releaseNotesFilePath: '$(Build.SourcesDirectory)/docs/releases/v$(Build.SourceBranchName).md'
     assets: '$(Build.ArtifactStagingDirectory)/*'
-    addChangeLog: true
-    changeLogCompareToRelease: lastFullRelease
-    changeLogType: commitBased
+    addChangeLog: false
