--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,9 +18,9 @@ variables:
 
 steps:
 - task: UseDotNet@2
-  displayName: 'Use .NET Core SDK'
+  displayName: 'Use .NET SDK 7.0.102'
   inputs:
-    version: 7.0.101
+    version: 7.0.102
     performMultiLevelLookup: true
 
 - task: CMake@1
