installer: fix a syntax error and simplify the output name
initially, i used the script wizard to create the installer and i mistakenly changed something and the installer broke, however, i used the wrong syntax to fix it

this fixes that

somehow, inno setup never flagged me for incorrect syntax

this would create a second entry in "Installed apps", and the old version has to be uninstalled first

with the name, i removed the "-SC-Installer" suffix

--- a/cmake/installer.iss.in
+++ b/cmake/installer.iss.in
@@ -5,7 +5,7 @@
 #define MyAppExeName "SimpleAVSGenerator.exe"
 
 [Setup]
-AppId=((BDD7D2F6-4F67-4AC3-B23B-79FDFE5CBE81}
+AppId={{BDD7D2F6-4F67-4AC3-B23B-79FDFE5CBE81}
 AppName={#MyAppName}
 AppVersion={#MyAppVersion}
 AppVerName={#MyAppName} v{#MyAppInformationalVersion}
@@ -18,7 +18,7 @@ DisableProgramGroupPage=yes
 LicenseFile=..\COPYING
 
 OutputDir=..\installer
-OutputBaseFilename=SimpleAVSGeneratorSetup-v{#MyAppInformationalVersion}-Win64-SC-Installer
+OutputBaseFilename=SimpleAVSGeneratorSetup-v{#MyAppInformationalVersion}-Win64
 Compression=lzma
 SolidCompression=yes
 WizardStyle=modern
