--- a/src/SimpleAVSGeneratorCore.Tests/SimpleAVSGeneratorCore.Tests.csproj
+++ b/src/SimpleAVSGeneratorCore.Tests/SimpleAVSGeneratorCore.Tests.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>SimpleAVSGeneratorCore.Tests</RootNamespace>
     <Nullable>enable</Nullable>
-
+    <ImplicitUsings>enable</ImplicitUsings>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
