--- a/src/SimpleAVSGeneratorCore/SimpleAVSGeneratorCore.csproj
+++ b/src/SimpleAVSGeneratorCore/SimpleAVSGeneratorCore.csproj
@@ -12,9 +12,8 @@
   <PropertyGroup>
     <DebugType>embedded</DebugType>
   </PropertyGroup>
-  
   <ItemGroup>
-    <PackageReference Include="MediaInfo.Wrapper.Core" Version="21.9.3" />
+    <PackageReference Include="Lsj.MediaInfo.Wrapper.Core" Version="22.12.1" />
   </ItemGroup>
 
 </Project>
